# refinement-types

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  changelogging.toml
.github/workflows/: release.yml
changes/: ~as-ref.feature.md  ~check.feature.md  ~context.change.md  ~rewrite.change.md
src/: char.rs  core.rs  empty.rs  int.rs  length.rs  lib.rs  logic.rs  static_str.rs  str.rs  type_regex.rs  type_str.rs
src/char/: ascii.rs  macros.rs  mod.rs  unicode.rs
src/int/: macros.rs  mod.rs
src/str/: bytes.rs  chars.rs  core.rs  mod.rs
